--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,13 @@ server:
 spring:
   application:
     name: axon-study
+  datasource:
+    url: jdbc:mysql://192.168.0.135:3306/axon_study?useSSL=false&useUnicode=true&characterEncoding=utf8
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: 1Mtg_izQtZow
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database: mysql
