--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,9 @@ spring:
       ddl-auto: update
     show-sql: true
     database: mysql
+  data:
+    mongodb:
+      uri: mongodb://192.168.0.135:27017
+      database: admin
+      username: root
+      password: xcwl2018
